--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
 <h1>Hello</h1>
 <p>I'm Kai the Hedgefox!</p>
-
+<h1>My Profiles</h1>    
+<p>Youtube: kaithehedgefox</p>    
+<p>Deviantart: kaithehedgefox10</p>
+<p>Fanfiction: kaithehedgefox</p>
+<p>Wattpad: kaithehedgefox</p>    
+<p>Reddit: kaithehedgefox</p>    
 </body>
 </html>
