--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <h1>Hello</h1>
 <p>I'm Kai the Hedgefox!</p>
-<h2>My Profiles</h2>    
-<p>Youtube: kaithehedgefox</p>    
-<p>Deviantart: kaithehedgefox10</p>
-<p>Fanfiction: kaithehedgefox</p>
-<p>Wattpad: kaithehedgefox</p>    
-<p>Reddit: kaithehedgefox</p>    
+<h2>My Profiles</h2>  
+<p>Youtube: <a href="https://www.youtube.com/channel/UCNJTI0RKhO5d83vxipmD7JQ">kaithehedgefox</a></p>    
+<p>Deviantart: <a href="https://www.deviantart.com/kaithehedgefox10">kaithehedgefox10</a></p>
+<p>Fanfiction: <a href="https://www.fanfiction.net/u/6164061/kaithehedgefox">kaithehedgefox10</a></p>
+<p>Wattpad: <a href="https://www.wattpad.com/user/kaithehedgefox">kaithehedgefox</a></p>
+<p>Reddit: <a href="https://www.reddit.com/user/kaithehedgefox">kaithehedgefox</a></p>    
     
 </body>
 </html>
