--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <h1>Hello</h1>
 <p>I'm Kai the Hedgefox!</p>
+<img src="kai 3.0.png" alt="kai 3.0"> 
+   
 <h2>My Profiles</h2>  
 <p>Youtube: <a href="https://www.youtube.com/channel/UCNJTI0RKhO5d83vxipmD7JQ">kaithehedgefox</a></p>    
 <p>Deviantart: <a href="https://www.deviantart.com/kaithehedgefox10">kaithehedgefox10</a></p>
