--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+    body {
+    background-color: darkgrey;
+}
+
+h1 {
+    color: white;
+}
+    
+h2 {
+    color: white;
+}
+
+p {
+    font-family: verdana;
+    font-size: 20px;
+}
+    </style>    
 <title>Page Title</title>
 </head>
 <body>
