--- a/index.html
+++ b/index.html
@@ -7,23 +7,29 @@
 }
 
 h1 {
-    color: white;
+    color: black;
 }
     
 h2 {
-    color: white;
+    color: black;
 }
 
 p {
     font-family: verdana;
     font-size: 20px;
 }
+
+    div { 
+    background-color: white;
+    }
     </style>    
 <title>Kai the Hedgefox</title>
 </head>
 <body>
 
-<h1>Hello</h1>
+<div>
+    <h1>Hello</h1>
+    </div>
 <p>I'm Kai the Hedgefox!</p>
 <img src="kai 3.0.png" alt="kai 3.0"> 
    
