--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@ p {
     </div>
 <p>I'm Kai the Hedgefox!</p>
 <img src="kai 3.0.png" alt="kai 3.0"> 
-   
-<h2>My Profiles</h2>  
+    
+<div>   
+<h2>My Profiles</h2> 
+    </div>
 <p>Youtube: <a href="https://www.youtube.com/channel/UCNJTI0RKhO5d83vxipmD7JQ">kaithehedgefox</a></p>    
 <p>Deviantart: <a href="https://www.deviantart.com/kaithehedgefox10">kaithehedgefox10</a></p>
 <p>Fanfiction: <a href="https://www.fanfiction.net/u/6164061/kaithehedgefox">kaithehedgefox</a></p>
