--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ p {
 <p>I'm Kai the Hedgefox!</p>
 <img src="kai 3.0.png" alt="kai 3.0"> 
     
-<div>   
+<div>
+    
+<a href="subpages/Characterbios.html">Meet Kai and Friends</a>    
 <h2>My Profiles</h2> 
     </div>
 <p>Youtube: <a href="https://www.youtube.com/channel/UCNJTI0RKhO5d83vxipmD7JQ">kaithehedgefox</a></p>    
