--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p {
 <img src="kai 3.0.png" alt="kai 3.0"> 
     
 <h2>
-  <a href="subpages/Characterbios.html">Meet Kai and Friends</a>        
+  <a href="subpages/characterbios/Characterbios.html">Meet Kai and Friends</a>        
     </h2>  
     
 <div>  
