--- a/subpages/characterbios/Characterbios.html
+++ b/subpages/characterbios/Characterbios.html
@@ -40,7 +40,7 @@ p {
   <a href="subpages/characterbios/Villains/Villains.html">Villains</a>        
     </h2>  
 <p>
-    <a href="Index.html">Return to home page</a> 
+    <a href="../../index.html">Return to home page</a> 
     </p>    
 </body>
 </html>
