--- a/subpages/characterbios/Characterbios.html
+++ b/subpages/characterbios/Characterbios.html
@@ -33,11 +33,11 @@ p {
     </div>
 
 <h2>
-  <a href="subpages/characterbios/Heroes/Heroes.html">Heroes</a>        
+  <a href="Heroes/Heroes.html">Heroes</a>        
     </h2>  
     
     <h2>
-  <a href="subpages/characterbios/Villains/Villains.html">Villains</a>        
+  <a href="Villains/Villains.html">Villains</a>        
     </h2>  
 <p>
     <a href="../../index.html">Return to home page</a> 
