--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -27,6 +27,8 @@ p {
 </head>
 <body>
 
-    
+    <p>
+    <a href="../../../index.html">Return to home page</a> 
+    </p>    
    </body>
 </html>
