--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -1,28 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-    body {
-    background-color: darkgrey;
-}
-
-h1 {
-    color: black;
-}
-    
-h2 {
-    color: black;
-}
-
-p {
-    font-family: verdana;
-    font-size: 20px;
-}
-
-    div { 
-    background-color: white;
-    }
-    </style>    
+<link href="../../../Style/style.css" rel="stylesheet" type="text/css">  
     <title>Heroes</title>
 </head>
 <body>
