--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -7,7 +7,7 @@
 <body>
 
     <p>
-    <a href="../../Characterbios.html">Return to home page</a> 
+    <a href="../Characterbios.html">Return to home page</a> 
     </p>    
    </body>
 </html>
