--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>Kai the Hedgefox</title>
 </head>
 <body>
+    <div>
+    <h1>Kai the Hedgefox</h1>
+    </div>
 
 <p>I'm Kai the Hedgefox!</p>
 <img src="kai 3.0.png" alt="kai 3.0"> 
