--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -13,9 +13,7 @@
     <h2>Kai and Friends</h2>
     </div>
     <img src="../../../kai 3.0.png" alt="kai 3.0">
-    <h2>
-    Kai
-    </h2>
+    <h2 style="color: #FFFFFF;">Kai</h2>
     
     <div>
     <h2>Others</h2>
