--- a/subpages/characterbios/Characterbios.html
+++ b/subpages/characterbios/Characterbios.html
@@ -11,11 +11,11 @@
     </h1>    
     </div>
 
-<h2>
+<h2 style= "color: #FFFFFF;">
   <a href="Heroes/Heroes.html">Heroes</a>        
     </h2>  
     
-    <h2>
+    <h2 style= "color: #FFFFFF;">
   <a href="Villains/Villains.html">Villains</a>        
     </h2>  
 <p>
