--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <h1>About Me</h1>
     </div>
     
-<h2>
+<h2 style= "color: #FFFFFF;">
   <a href="subpages/characterbios/Characterbios.html">Meet Me, and My Friends and Foes.</a>        
+    </h2>  
+
+    <h2 style= "color: #FFFFFF;">
+  <a href="subpages/kaisuniverse/Kaisuniverse.html">Explore My Universe</a>        
     </h2>  
     
 <div>  
