--- a/subpages/kaisuniverse/Kaisuniverse.html
+++ b/subpages/kaisuniverse/Kaisuniverse.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        <h1>
+        <h1 style= "color: #FFFFFF;">
     Explore Kai's Universe
     </h1>    
     </div>
