--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   <a href="subpages/kaisuniverse/Kaisuniverse.html">Explore My Universe</a>        
     </h2>  
     
+    <h2 style= "color: #FFFFFF;">
+  <a href="">My Story</a>        
+    </h2>    
+    
 <div>  
 <h2>My Profiles</h2> 
     </div>
