--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </h2>  
     
     <h2 style= "color: #FFFFFF;">
-  <a href="">My Story</a>        
+  <a href="subpages/Kaisstory/Kaisstory.html">My Story</a>        
     </h2>    
     
 <div>  
