--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     
 <h2 style= "color: #FFFFFF;">
-  <a href="subpages/characterbios/Characterbios.html">Meet Me, and My Friends and Foes.</a>        
+  <a href="subpages/characterbios/Characterbios.html">Meet Me, and My Friends and Foes</a>        
     </h2>  
 
     <h2 style= "color: #FFFFFF;">
