--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -12,7 +12,7 @@
     <div>
     <h2>Kai and Friends</h2>
     </div>
-    <img src="../../../kai 3.0.png" alt="kai 3.0">
+    <a href="Kaiandfriends/Kai.html"><img src="../../../kai 3.0.png" alt="kai 3.0"></a>
     <h2 style="color: #FFFFFF;">Kai</h2> 
     
     <div>
