--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="../../../../Style/style.css" rel="stylesheet" type="text/css">  
+<style>
+    body {
+    background-color:  #666666;
+}
+
+h1 {
+    color: black;
+}
+    
+h2 {
+    color: black;
+}
+
+p {
+    color: #FFFFFF;
+    font-family: verdana;
+    font-size: 20px;
+}
+
+    div { 
+    background-color: #FFFFFF;
+    }
+
+a:link { 
+color: #66FFFF;
+}
+
+a:visited { 
+color: #66FFFF;
+}
+    </style> 
     <title>Heroes</title>
 </head>
 <body>
