--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-    body {
+body {
     background-color:  #666666;
 }
 
@@ -14,8 +14,16 @@ h2 {
     color: black;
 }
 
+h3 {
+    color: black;
+}
+
+h4 {
+    color: black;
+}
+
 p {
-    color: #FFFFFF;
+    color: #666666;
     font-family: verdana;
     font-size: 20px;
 }
