--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -23,7 +23,7 @@ h4 {
 }
 
 p {
-    color: #666666;
+    color: #FFFFFF;
     font-family: verdana;
     font-size: 20px;
 }
@@ -52,7 +52,12 @@ color: #66FFFF;
     <div>
     <h2>Appearance</h2>
     </div>
-    
+    <p>
+        Kai is a dark grey anthropomorphic hedgefox with large brown eyes, large fox ears, and spiky dark grey hair with blonde bangs that sprouts outward rather than flows down.
+    </p>
+    <p>
+        In his civilian from, he wears a dark grey t-shirt, dark grey pants, and white shoes and gloves. In his armored form, he is equipped with a grey suit of armor consisting of a white chestplate with a "1" on the front, white boots and white gauntlets.
+    </p>
       <div>
     <h2>Personality</h2>
     </div>
