--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -12,7 +12,7 @@
     <div>
     <h2>Kai and Friends</h2>
     </div>
-    <h2 style="color: #FFFFFF;">Kai the Hedgefox</h2> 
+    <h2 style="color: #FFFFFF;">Kai Aki Kai</h2> 
     <a href="Kaiandfriends/Kai.html"><img src="../../../kai 3.0.png" alt="kai 3.0"></a>
     
     <div>
