--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -48,7 +48,7 @@ color: #66FFFF;
 </head>
 <body>
 <div>
-    <h1>Kai</h1>
+    <h1>Kai Aki Kai</h1>
     </div>
     
     <img src="../../../../kai 3.0.png" alt="kai 3.0">
