--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -82,6 +82,9 @@ color: #66FFFF;
          .
         </h2>
     </div>
+    <p>
+        Kai Aki Kai is the main protagonist of his own series.
+    </p>
     
     <div>
     <h2> Appearance
