--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -21,6 +21,11 @@
     <div>
     <h2>Others</h2>
     </div>
+    <table>
+     <tr>
+         <td> <h2 style="color: #FFFFFF;">Plasma Mouse</h2> <a href=""><img style="height: 290px;" src="../../../plasma mouse.png"></a></td>
+        </tr>
+    </table>
     
     <p>
     <a href="../Characterbios.html">Return to previous page</a> 
