--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -99,7 +99,9 @@ color: #66FFFF;
       <div>
     <h2>Personality</h2>
     </div>
-    
+    <p>
+        Kai loves anything without vegetables. His favorite food is pizza.
+    </p>
       <div>
     <h2>Arsenal</h2>
     </div>
