--- a/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
@@ -96,7 +96,9 @@ color: #D7DF01;
       <div>
     <h2>Personality</h2>
     </div>
-    
+    <p>
+        Not much is known about Plasma Mouse's personality. His favorite food is pizza.
+    </p>
       <div>
     <h2>Arsenal</h2>
     </div>
@@ -108,7 +110,7 @@ color: #D7DF01;
     </p>
     
     <p>
-       See all of his weapons <a href=""><b>Here</b></a>.
+       See all of his weapons <a href="https://www.deviantart.com/kaithehedgefox10/journal/List-of-Plasma-Mouse-s-Weapons-744610951"><b>Here</b></a>.
     </p>
       <div>
     <h2>Story</h2>
