--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -25,6 +25,7 @@
      <table>
      <tr>
          <td> <h2 style="color: #FFFFFF;">Plasma Mouse</h2> <a href="Kaisallies/Plasmamouse.html"><img style="height: 290px;" src="../../../plasma mouse.png"></a></td>
+         <td> <h2 style="color: #FFFFFF;">Stephen the Fox Boy</h2> <a href="Kaisallies/Stephen.html"><img style="height: 290px;" src="../../../Stephen.png"></a></td>
         </tr>
     </table>
     
