--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
   <a href="subpages/Games/Games.html">My Games</a>        
     </h2>   
     
+    <h2 style= "color: #FFFFFF;">
+  <a href="subpages/Games/Games.html">My Videos</a>        
+    </h2>   
+    
 </body>
 </html>
