--- a/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
@@ -103,7 +103,7 @@ color: #D7DF01;
         Plasma Mouse is capable of manipulating plasma, hence his name. He can also mould and fire plasma, and use it as a weapon.
     </p>
     <p>
-        Plasma Mouse sometimes uses his own fists for combat. He also has a visor that can fire lasers, as well as a helmet that can shoot electricity. He is also capable of transmuting his arm into a cannon. 
+        Plasma Mouse sometimes uses hand-to-hand and magic for combat. He also has a visor that can fire lasers, as well as a helmet that can shoot electricity. He is also capable of transmuting his arm into a cannon. 
     </p>
     
     <p>
