--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
   <a href="subpages/Games/Games.html">My Videos</a>        
     </h2>   
     
+        <div>
+    <h1 style= "color: #FFFFFF;">.</h1>
+    </div>
+    
 </body>
 </html>
