--- a/subpages/Kaisuniverse/Kaisuniverse.html
+++ b/subpages/Kaisuniverse/Kaisuniverse.html
@@ -10,6 +10,10 @@
     Explore Kai's Universe
     </h1>    
     </div>
+    
+            <div>
+    <h1 style= "color: #FFFFFF;">.</h1>
+    </div>
 
 <p>
     <a href="../../index.html">Return to home page</a> 
