--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -116,6 +116,10 @@ color: #66FFFF;
     <h3>Appearances</h3>
     </div>
     
+            <div>
+    <h1 style= "color: #FFFFFF;">.</h1>
+    </div>
+    
     <p>
     <a href="../Heroes.html">Return to previous page</a> 
     </p>    
