--- a/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
@@ -117,6 +117,10 @@ color: #D7DF01;
     <h3>Appearances</h3>
     </div>
     
+            <div>
+    <h1 style= "color: #FFFFFF;">.</h1>
+    </div>
+    
     <p>
     <a href="../Heroes.html">Return to previous page</a> 
     </p>    
