--- a/subpages/characterbios/Heroes/Kaisallies/Stephen.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Stephen.html
@@ -120,6 +120,10 @@ color: #F7FE2E;
     <h3>Appearances</h3>
     </div>
     
+            <div>
+    <h1 style= "color: #FFFFFF;">.</h1>
+    </div>
+    
     <p>
     <a href="../Heroes.html">Return to previous page</a> 
     </p>    
