--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -37,6 +37,10 @@
     <h2>Others</h2>
     </div>
     
+            <div>
+    <h1 style= "color: #FFFFFF;">.</h1>
+    </div>
+    
     <p>
     <a href="../Characterbios.html">Return to previous page</a> 
     </p>    
