--- a/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
@@ -118,7 +118,7 @@ color: #D7DF01;
     </div>
     
             <div>
-    <h1 style= "color: #FFFFFF;">.</h1>
+    <h1 style= "color: #2E2E2E;">.</h1>
     </div>
     
     <p>
