--- a/subpages/characterbios/Heroes/Kaisallies/Stephen.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Stephen.html
@@ -121,7 +121,7 @@ color: #F7FE2E;
     </div>
     
             <div>
-    <h1 style= "color: #FFFFFF;">.</h1>
+    <h1 style= "color: #6E6E6E;">.</h1>
     </div>
     
     <p>
