--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </h2>   
     
     <h2 style= "color: #FFFFFF;">
-  <a href="subpages/Games/Games.html">My Videos</a>        
+  <a href="subpages/Videos/Videos.html">My Videos</a>        
     </h2>   
     
         <div>
