--- a/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
@@ -43,6 +43,13 @@ color: #D7DF01;
 a:visited { 
 color: #D7DF01;
 }
+    
+    li {
+    color: #000000;
+    font-family: verdana;
+    font-size: 20px;
+}
+    
     </style> 
     <title>Plasma Mouse</title>
 </head>
