--- a/subpages/characterbios/Heroes/Kaisallies/Stephen.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Stephen.html
@@ -43,6 +43,13 @@ color: #F7FE2E;
 a:visited { 
 color: #F7FE2E;
 }
+    
+    li {
+    color: #A4A4A4;
+    font-family: verdana;
+    font-size: 20px;
+}
+    
     </style> 
     <title>Stephen the Fox Boy</title>
 </head>
