--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -43,6 +43,13 @@ color: #66FFFF;
 a:visited { 
 color: #66FFFF;
 }
+    
+li {
+    color: #FFFFFF;
+    font-family: verdana;
+    font-size: 20px;
+}
+    
     </style> 
     <title>Kai Aki Kai</title>
 </head>
