--- a/subpages/Videos/Shows/Suegetsgrounded/Suegetsgrounded.html
+++ b/subpages/Videos/Shows/Suegetsgrounded/Suegetsgrounded.html
@@ -18,7 +18,16 @@
     </div>
     
     <ul>
-        <li>hello </li>
+        <li>S1: E1: <a href="https://www.youtube.com/watch?v=8j9oMCZhgBg">Sue gets fat at Domino's and gets grounded</a> </li>
+        <li>S1: E2: <a href="https://www.youtube.com/watch?v=_VG8xya8Mik">Sue and Techno discover a time travel spell and get ungrounded/Freedom Planet TF TG/grounded</a> </li>
+        <li>S1: E3: <a href="https://www.youtube.com/watch?v=ZjjWy5cxTEk">Chrome gets in dead meat</a> </li>
+        <li>S1: E4: <a href="https://www.youtube.com/watch?v=9B_YVOBofr8">Sue's reward day</a> </li>
+        <li>S1: E5: <a href="https://www.youtube.com/watch?v=LIdiRvzsonM">Catgirl TF/grounded</a> </li>
+        <li>S1: E6: <a href="https://www.youtube.com/watch?v=vZfIrsa7OJY">Sue and Brad steal Rabbot Woman's mask and get grounded</a> </li>
+        <li>S1: E7: <a href="https://www.youtube.com/watch?v=Ka_bSMj2p4Q">Beck turns Sue's house into a castle and gets grounded</a> </li>
+        <li>S1: E8: <a href="https://www.youtube.com/watch?v=wY2ZSBxbhoE">Sue turns the castle back to her house and gets ungrounded</a> </li>
+        <li>S1: E9: <a href="https://www.youtube.com/watch?v=JesuP9ImENU">Call gives Sue a reward day and gets grounded</a> </li>
+        <li>S1: E10: <a href="https://www.youtube.com/watch?v=Tk2QU9htMBw">Beck and Call play Super Smash Bros. Ultimate while grounded</a> </li>
     </ul>
     
     <div>
