--- a/subpages/Videos/Shows/Suegetsgrounded/Suegetsgrounded.html
+++ b/subpages/Videos/Shows/Suegetsgrounded/Suegetsgrounded.html
@@ -41,7 +41,7 @@
     </div>
 
 <p>
-    <a href="../../Videos.html">Return to home page</a> 
+    <a href="../../Videos.html">Return to previous page</a> 
     </p>    
 </body>
 </html>
