--- a/subpages/characterbios/Heroes/Kaisallies/Stephen.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Stephen.html
@@ -104,7 +104,10 @@ color: #F7FE2E;
     <h2>Personality</h2>
     </div>
     <p>
-        Stephen doesn't eat many fruits or vegetables often. He primarily eats meat, such as mice, and chicken. 
+        Stephen doesn't eat many fruits or vegetables often. He primarily eats meat, such as mice, and chicken.
+    </p>
+    <p>
+        Stephen often has a bad habit of cheating in combat. Others claim he's a cheater, but he doesn't consider himself to be doing so.
     </p>
       <div>
     <h2>Arsenal</h2>
