--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -14,7 +14,7 @@
     </div>
     <table>
      <tr>
-         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Kai Aki Kai</h2> <a href="Kaiandfriends/Kai.html"><img style="display: block; margin-left: auto; margin-right: auto;" src="../../../kai 3.0.png"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Kai Kai</h2> <a href="Kaiandfriends/Kai.html"><img style="display: block; margin-left: auto; margin-right: auto;" src="../../../kai 3.0.png"></a></td>
         </tr>
     </table>
     
