--- a/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Plasmamouse.html
@@ -110,11 +110,11 @@ color: #D7DF01;
         Plasma Mouse is capable of manipulating plasma, hence his name. He can also mould and fire plasma, and use it as a weapon.
     </p>
     <p>
-        Plasma Mouse sometimes uses hand-to-hand and magic for combat. He also has a visor that can fire lasers, as well as a helmet that can shoot electricity. He is also capable of transmuting his arm into a cannon. 
+        Plasma Mouse also uses hand-to-hand and magic for combat. He also has a visor that can fire lasers, as well as a helmet that can shoot electricity. He is also capable of transmuting his arm into a cannon. 
     </p>
     
     <p>
-       See all of his weapons <a href="https://www.deviantart.com/kaithehedgefox10/journal/List-of-Plasma-Mouse-s-Weapons-744610951"><b>Here</b></a>.
+       See all of his weapons <a href="https://www.deviantart.com/kaithehedgefox10/art/List-of-Plasma-Mouse-s-Weapons-774831406"><b>Here</b></a>.
     </p>
       <div>
     <h2>Story</h2>
