--- a/subpages/characterbios/Heroes/Kaisallies/Stephen.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Stephen.html
@@ -120,7 +120,7 @@ color: #F7FE2E;
     </p>
     
     <p>
-       See all of his weapons <a href=""><b>Here</b></a>.
+       See all of his weapons <a href="deviantart.com%2Fkaithehedgefox10%2Fart%2FList-of-Stephen-s-Weapons-SUGGESTIONS-NEEDED-774885753"><b>Here</b></a>.
     </p>
       <div>
     <h2>Story</h2>
