--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -107,7 +107,7 @@ li {
     <h2>Personality</h2>
     </div>
     <p>
-        Kai loves anything without vegetables. His favorite food is pizza.
+        Kai is brave hardworking, and never gives up. He has a tendency to team up with others when he can, but not always.
     </p>
       <div>
     <h2>Arsenal</h2>
@@ -117,10 +117,6 @@ li {
     </p>
       <div>
     <h2>Story</h2>
-    </div>
-    
-      <div>
-    <h3>Appearances</h3>
     </div>
     
             <div>
