--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -93,16 +93,6 @@ li {
         Kai Kai is the main protagonist of his own series.
     </p>
     
-    <div>
-    <h2> Appearance
-        </h2>
-    </div>
-    <p>
-        Kai is a dark grey anthropomorphic hedgefox with large brown eyes, large fox ears, and spiky dark grey hair with blonde bangs that sprouts outward rather than flows down.
-    </p>
-    <p>
-        In his civilian from, he wears a dark grey t-shirt, dark grey pants, and white shoes and gloves. In his armored form, he is equipped with a grey suit of armor consisting of a white chestplate with a "1" on the front, white boots and white gauntlets.
-    </p>
       <div>
     <h2>Personality</h2>
     </div>
@@ -113,7 +103,10 @@ li {
     <h2>Arsenal</h2>
     </div>
     <p>
-        Kai's main weapon is a buster, an arm cannon that fires plasma shots. It can be charged up to fire bigger and stronger projectiles. He can transmute either or both of his arms into arm cannons. Kai can also turn his arm into a lightsaber for melee combat. He can also charge it up to fire sword  beams.
+        Kai's main weapon is a buster, an arm cannon that fires plasma shots. It can be charged up to fire bigger and stronger projectiles. He can transmute either or both of his arms into arm cannons. Kai can also turn his arm into a lightsaber for melee combat. He can also charge it up to fire sword  beams. 
+    </p>
+    <p>
+        Kai's signature move is Bender Cannon, a giant beam of any elemental power fired from his cupped hands. Another one of his signature moves is Bender Sphere Attack, a sphere of an elemental power fired from one hand. His element is wind.
     </p>
       <div>
     <h2>Story</h2>
