--- a/subpages/characterbios/Heroes/Kaisallies/Stephen.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Stephen.html
@@ -90,16 +90,6 @@ color: #F7FE2E;
         
     </p>
     
-    <div>
-    <h2> Appearance
-        </h2>
-    </div>
-    <p>
-        Stephen is a fox boy with orange eyes, a black snout, fox ears, a bushy fox tail, fox fangs, and long orange hair tied in a ponytail held by a grey ribbon. He is covered in orange fur, except for the fur on his chest which is white. His hands and feet are paws and are covered in black fur.
-    </p>
-    <p>
-        Stephen wears a grey tank top, brown pants, a grey belt with an "S" on the golden buckle. He also wears dark grey shoes and brown gloves. 
-    </p>
       <div>
     <h2>Personality</h2>
     </div>
@@ -113,7 +103,7 @@ color: #F7FE2E;
     <h2>Arsenal</h2>
     </div>
     <p>
-        Stephen is capable of manipulating Water, Fire, Air, Earth, and Electricity. Along with Light and Darkness. He is also capable of shapeshifting and teleportation. 
+        Stephen is capable of manipulating Water, Fire, Air, Earth, Electricity, Wood, and Ice. Along with Light and Darkness. He is also capable of shapeshifting and teleportation. 
     </p>
     <p>
         Stephen also uses knives, shurikens, and other weapons as well. He often fires, or throws projectiles.
