--- a/subpages/characterbios/Heroes/Kaisallies/Stephen.html
+++ b/subpages/characterbios/Heroes/Kaisallies/Stephen.html
@@ -113,7 +113,11 @@ color: #F7FE2E;
        See all of his weapons <a href="https://www.deviantart.com/kaithehedgefox10/art/List-of-Stephen-s-Weapons-SUGGESTIONS-NEEDED-774885753"><b>Here</b></a>.
     </p>
       <div>
-    <h2>Story</h2>
+     <h2>Story</h2>
+    </div>
+    
+            <div>
+    <h1 style= "color: #2E2E2E;">.</h1>
     </div>
     
     <p>
