--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -15,6 +15,7 @@
     <table>
      <tr>
          <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Kai Kai</h2> <a href="Kaiandfriends/Kai.html"><img style="display: block; margin-left: auto; margin-right: auto;" src="../../../kai 3.0.png"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Sue Sakamoto</h2> <a href="Kaiandfriends/Sue.html"><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../sue 3.0.png"></a></td>
         </tr>
     </table>
     
