--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
 
 <p>I'm Kai the Hedgefox!</p>
-<img src="kai 3.0.png" alt="kai 3.0"> 
+<img style="height: 290px; src=kai 3.0.png" alt="kai 3.0"> 
     
     <div>
     <h1>About Me</h1>
