--- a/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Kai.html
@@ -58,7 +58,7 @@ li {
     <h1>Kai Kai</h1>
     </div>
     
-    <img src="../../../../kai 3.0.png" alt="kai 3.0">
+    <img style="height: 290px;" src="../../../../kai 3.0.png" alt="kai 3.0">
     
     <div>
     <h2>Profile</h2>
