--- a/subpages/characterbios/Heroes/Kaiandfriends/Sue.html
+++ b/subpages/characterbios/Heroes/Kaiandfriends/Sue.html
@@ -103,7 +103,7 @@ li {
     <h2>Arsenal</h2>
     </div>
     <p>
-    
+     Like the other Members of the K-Force, Sue's basic weapons are a Buster, and Lightsaber. He signature moves are Bender Cannon, and Bender Sphere Attack. Her element is Lightning.
     </p>
       <div>
     <h2>Story</h2>
