--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
   <a href="subpages/Games/Games.html">My Games</a>        
     </h2>
     
+       <h2 style= "color: #FFFFFF;">
+  <a href="subpages/Videos/Videos.html">My Videos</a>        
+    </h2>
+    
         <div>
     <h1 style= "color: #FFFFFF;">.</h1>
     </div>
