--- a/subpages/Videos/Videos.html
+++ b/subpages/Videos/Videos.html
@@ -11,6 +11,10 @@
     </h1>    
     </div>
     
+    <h2 style= "color: #FFFFFF;">
+  <a href="Youtube Poop/Youtube Poop.html">Youtube Poop</a>        
+    </h2>   
+    
             <div>
     <h1 style= "color: #FFFFFF;">.</h1>
     </div>
