--- a/subpages/Videos/Videos.html
+++ b/subpages/Videos/Videos.html
@@ -12,7 +12,7 @@
     </div>
     
     <h2 style= "color: #FFFFFF;">
-  <a href="Youtube Poop/Youtube Poop.html">Youtube Poop</a>        
+  <a href="Youtube Poop.html">Youtube Poop</a>        
     </h2>   
     
             <div>
