--- a/subpages/Videos/Youtube Poop.html
+++ b/subpages/Videos/Youtube Poop.html
@@ -16,7 +16,7 @@
     </table>
     
     <p>
-    <a href="../Characterbios.html">Return to previous page</a> 
+    <a href="Videos.html">Return to previous page</a> 
     </p>    
    </body>
 </html>
