--- a/subpages/Videos/Youtube Poop.html
+++ b/subpages/Videos/Youtube Poop.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href="../../../Style/style.css" rel="stylesheet" type="text/css">  
-    <title>Heroes</title>
+    <title>Youtube Poop</title>
 </head>
 <body>
 <div>
