--- a/subpages/Videos/Youtube Poop.html
+++ b/subpages/Videos/Youtube Poop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="../../../Style/style.css" rel="stylesheet" type="text/css">  
+<link href="../../../../Style/style.css" rel="stylesheet" type="text/css">  
     <title>Youtube Poop</title>
 </head>
 <body>
