--- a/subpages/Videos/Youtube Poop.html
+++ b/subpages/Videos/Youtube Poop.html
@@ -15,6 +15,10 @@
         </tr>
     </table>
     
+                <div>
+    <h1 style= "color: #FFFFFF;">.</h1>
+    </div>
+    
     <p>
     <a href="Videos.html">Return to previous page</a> 
     </p>    
