--- a/subpages/Videos/suegetsgrounded.html
+++ b/subpages/Videos/suegetsgrounded.html
@@ -29,6 +29,9 @@
     <h2>Season 5</h2>
     </div>
     
+            <div>
+    <h1 style= "color: #FFFFFF;">.</h1>
+    </div>
     
     <p>
     <a href="Videos.html">Return to previous page</a> 
