--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -10,12 +10,12 @@
     </div>
     
     <div>
-    <h2>Kai and Friends</h2>
+    <h2>K-Force</h2>
     </div>
     <table>
      <tr>
-         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Kai Kai</h2> <a href="Kaiandfriends/Kai.html"><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../kai 3.0.png"></a></td>
-         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Sue Sakamoto</h2> <a href="Kaiandfriends/Sue.html"><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../sue 3.0.png"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Kai Kai</h2> <a href="Kforce/Kai.html"><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../kai 3.0.png"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Sue Sakamoto</h2> <a href="Kforce/Sue.html"><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../sue 3.0.png"></a></td>
         </tr>
     </table>
     
