--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -16,6 +16,10 @@
      <tr>
          <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Kai Kai</h2> <a href="https://deviantart.com/kaithehedgefox10/art/Kai-Kai-3-0-Bio-779276975"><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../kai 3.0.png"></a></td>
          <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Sue Sakamoto</h2> <a href="https://deviantart.com/kaithehedgefox10/art/Sue-Sakamoto-3-0-Bio-786569151"><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../sue 3.0.png"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Brett the Hedgehog</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Josh the Echidna</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Rin the Hedgehog</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">? the Cat</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
         </tr>
     </table>
     
