--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <p>Deviantart: <a href="https://www.deviantart.com/kaithehedgefox10">kaithehedgefox10</a></p>
 <p>Fanfiction: <a href="https://www.fanfiction.net/u/6164061/kaithehedgefox">kaithehedgefox</a></p>
 <p>Wattpad: <a href="https://www.wattpad.com/user/kaithehedgefox">kaithehedgefox</a></p>
-<p>Reddit: <a href="https://www.reddit.com/user/kaithehedgefox">kaithehedgefox</a></p>    
+<p>Reddit: <a href="https://www.reddit.com/user/kaithehedgefox">kaithehedgefox</a></p>
+<p>Tumblr: <a href="https://kaithehedgefox.tumblr.com/">kaithehedgefox</a></p>    
     
     <div>  
 <h1>My Stuff</h1> 
