--- a/subpages/Videos/Youtube Poop.html
+++ b/subpages/Videos/Youtube Poop.html
@@ -12,6 +12,7 @@
     <table>
      <tr>
          <td style="padding-right: 5px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Amy Rose's not so Bad Hair Day</h2> <a href="Youtube Poop/amyrosesnotsobadhairday.html"><img style="height: 200px; display: block; margin-left: auto; margin-right: auto;" src="../../amynotsobadhairday.jpg"></a></td>
+         <td style="padding-right: 5px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Fixing Amy Rose</h2> <a href="Youtube Poop/fixingamyrose.html"><img style="height: 200px; display: block; margin-left: auto; margin-right: auto;" src="../../amynotsobadhairday.jpg"></a></td>
         </tr>
     </table>
     
