--- a/subpages/characterbios/Heroes/Heroes.html
+++ b/subpages/characterbios/Heroes/Heroes.html
@@ -19,7 +19,7 @@
          <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Brett the Hedgehog</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
          <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Josh the Echidna</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
          <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Rin the Hedgehog</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
-         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">? the Cat</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
+         <td style="padding-right: 10px; padding-left: 10px;"> <h2 style="color: #FFFFFF;">Pam the Cat</h2> <a href=""><img style="height: 290px; display: block; margin-left: auto; margin-right: auto;" src="../../../"></a></td>
         </tr>
     </table>
     
